# telegram-mcp-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/error/: mod.rs
src/mcp/: dispatcher.rs  mod.rs  protocol.rs  sse.rs  tool.rs
src/mcp/tools/: admin.rs  bots.rs  chats.rs  contacts.rs  folders.rs  media.rs  messages.rs  mod.rs  profile.rs  search.rs
src/telegram/: mod.rs  path_guard.rs
src/telegram/grammers_impl/: admin.rs  auth.rs  bots.rs  chats.rs  contacts.rs  folders.rs  media.rs  messages.rs  mod.rs  profile.rs  search.rs
