[package]
name = "telegram-mcp-rs"
version = "0.1.0"
edition = "2024"
description = "A high-performance, pure-Rust Model Context Protocol (MCP) server for Telegram with 40+ tools."
license = "MIT"
repository = "https://github.com/yourusername/telegram-mcp-rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.32"
grammers-client = { git = "https://github.com/Lonami/grammers.git", version = "0.8.1" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers.git", version = "0.8.1" }
grammers-session = { git = "https://github.com/Lonami/grammers.git", version = "0.8.0" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git", version = "0.8.0" }
lazy_static = "1.5.0"
mcp-core = "0.1.50"
mcp-sdk = "0.0.3"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.13.1", features = ["v4"] }
tokio = "1.52.3"
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
